--- a/index.html
+++ b/index.html
@@ -249,7 +249,52 @@
               </div>
               <!-- /.block-text -->
             </div>
-            
+            <div class="swiper-slide">
+              <div class="block-image">
+                <img src="img/specialities.png" alt="photo: Specialties" class="block-img">
+              </div>
+              <!-- /.block-image -->
+              <div class="block-text">
+                <p class="name-block light">chocolate pancakes</p>
+                <div class="border"></div>
+                <!-- /.border -->
+                <p class="text-bold light">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at
+                  velit maximus, molestie est a, tempor magna.
+                </p>
+                <p class="text-normal light">
+                  Integer ullamcorper neque eu purus euismod, ac faucibus mauris
+                  posuere. Morbi non ultrices ligula. Sed dictum, enim sed
+                  ullamcorper feugiat, dui odio vehicula eros, a sollicitudin lorem
+                  quam nec sem. Mauris tincidunt feugiat diam convallis pharetra.
+                  Nulla facilisis semper laoreet.
+                </p>
+              </div>
+              <!-- /.block-text -->
+            </div>
+            <div class="swiper-slide">
+              <div class="block-image">
+                <img src="img/specialities.png" alt="photo: Specialties" class="block-img">
+              </div>
+              <!-- /.block-image -->
+              <div class="block-text">
+                <p class="name-block light">chocolate pancakes</p>
+                <div class="border"></div>
+                <!-- /.border -->
+                <p class="text-bold light">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at
+                  velit maximus, molestie est a, tempor magna.
+                </p>
+                <p class="text-normal light">
+                  Integer ullamcorper neque eu purus euismod, ac faucibus mauris
+                  posuere. Morbi non ultrices ligula. Sed dictum, enim sed
+                  ullamcorper feugiat, dui odio vehicula eros, a sollicitudin lorem
+                  quam nec sem. Mauris tincidunt feugiat diam convallis pharetra.
+                  Nulla facilisis semper laoreet.
+                </p>
+              </div>
+              <!-- /.block-text -->
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
